<resources>
    <string name="app_name">Calculation Application</string>
    <string name="number1">1</string>
    <string name="number2">2</string>
    <string name="number3">3</string>
    <string name="number4">4</string>
    <string name="number5">5</string>
    <string name="number6">6</string>
    <string name="number7">7</string>
    <string name="number8">8</string>
    <string name="number9">9</string>
    <string name="number10">0</string>
    <string name="add">+</string>
    <string name="subract">-</string>
    <string name="multiply">x</string>
    <string name="divide">\u00F7</string>
    <string name="remainder">%</string>
    <string name="Clear">C</string>
</resources>